--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-<h1>Hello World</h1>
-<p>Introduction</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Hello World Button</title>
+  </head>
+  <body>
+    <button onclick="document.getElementById('output').innerHTML = 'Hello World!'">Click me!</button>
+    <div id="output"></div>
+  </body>
+</html>
